--- a/index.html
+++ b/index.html
@@ -24,4 +24,84 @@
     </p>
 
 </body>
+</html><!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Practica DNS y Hosting</title>
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 700px;
+            margin: 60px auto;
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            color: #2c3e50;
+            text-align: center;
+        }
+
+        h2 {
+            color: #34495e;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        a {
+            color: #1a73e8;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .footer {
+            margin-top: 30px;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+
+        <h1>Practica 1 - DNS y Hosting</h1>
+        <h2>Saul Zas Carballal</h2>
+
+        <p>
+            Alumno de la asignatura <strong>Laboratorio de Redes</strong>.
+        </p>
+
+        <p>
+            Correo electronico:
+            <a href="mailto:saul.zasc@udc.es">saul.zasc@udc.es</a>
+        </p>
+
+        <div class="footer">
+            <p>
+                <a href="https://freedns.afraid.org">Free DNS</a>
+            </p>
+        </div>
+
+    </div>
+</body>
 </html>
+
